# rcpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md
cmake/: rcppConfig.cmake.in
examples/: CMakeLists.txt
examples/containers/: 01_construction.cpp
examples/runtime_overhead/: 05_checked_subtraction.cpp
examples/zero_overhead/: 01_value_passthrough.cpp  02_arithmetic.cpp  03_safe_sqrt.cpp  04_parameter_passing.cpp  05_comparison.cpp  06_multiply.cpp  07_safe_divide.cpp  08_chain.cpp
include/rcpp/: compose.hpp  diagnostics.hpp  interval.hpp  operations.hpp  predicates.hpp  refine.hpp  refined.hpp  refined_type.hpp
include/refinery/: domain.hpp  interval.hpp  operations.hpp  refined_container.hpp  refined_type.hpp  refinery.hpp
scripts/: compare_asm.sh
tests/: CMakeLists.txt  test_refine.cpp  test_refined_container.cpp
